--- a/Parcial-2.html
+++ b/Parcial-2.html
@@ -962,6 +962,10 @@ p-value
 <p>Tras realizar el ajuste mediante los tres tipos de modelos logísticos que se exploraron durante el curso, se obtienen resultados similares en la medida en que las variables explicativas elegidas han sido significativas en la explicación del resultado en las pruebas ICFES aún haciendo los agrupamientos que se hicieron dentro de esta.</p>
 <p>Con lo anterior queda en evidencia que el resultado puede ser explicado por distintas variables de tipo categórico al emplear la regresión logística, para el caso particular, la naturaleza del colegio, la clasificación socioeconómica, el género y la conexión a internet en el hogar.</p>
 </div>
+<div id="código-empleado" class="section level1">
+<h1>Código empleado</h1>
+<p>El codigo y todo el desarrollo del presente documento se encuentran presentes en conjunto con la base de datos en el siguiente <a href="https://github.com/Alebedoyacat/ICFES_Categoricos">Repositorio virtual</a>. El acceso es libre y continuo.</p>
+</div>
 </div>
 </div>
 
